--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,16 @@ dependencies {
 
     // init.sql -> Flyway 사용하기 위해서
     implementation 'org.flywaydb:flyway-mysql' // MySQL 지원 확장 추가
+    implementation 'org.flywaydb:flyway-core'
     // implementation 'org.flywaydb:flyway-core:9.22.3' // 또는 최신 버전
-    // implementation 'org.flywaydb:flyway-core'
+
+
+    // --- QueryDSL (Spring Boot 3.x / Jakarta) ---
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'      // JPA 메타모델 참조용 (컴파일/런타임)
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta' // Q클래스 생성기(Annotation Processor)
+    // 아래 두 줄은 일부 환경에서 APT가 Jakarta 어노테이션을 못 찾는 문제 예방용 (선택적이지만 권장)
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 }
 
 tasks.named('test') {
