--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     // implementation 'org.flywaydb:flyway-core:9.22.3' // 또는 최신 버전
 
 
-    // --- QueryDSL (Spring Boot 3.x / Jakarta) ---
+    // QueryDSL (Spring Boot 3.x / Jakarta)
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'      // JPA 메타모델 참조용 (컴파일/런타임)
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta' // Q클래스 생성기(Annotation Processor)
     // 아래 두 줄은 일부 환경에서 APT가 Jakarta 어노테이션을 못 찾는 문제 예방용 (선택적이지만 권장)
@@ -70,10 +70,13 @@ dependencies {
     // 인증·인가(Security) 기능
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    // --- JJWT (토큰 생성/검증) ---
+    // JJWT (토큰 생성/검증)
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // 주소검색 JDK 9 이상에서 PostConstruct 사용을 위해
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 tasks.named('test') {
